Add jvm memory options, and skip tests by default for now